<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_todolist"
        android:icon="@drawable/todolist"
        android:title="@string/title_todolist" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/post"
        android:title="@string/title_post" />

    <item
        android:id="@+id/navigation_calender"
        android:icon="@drawable/calendar"
        android:title="@string/title_calender" />




</menu>