<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.diarytest.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.diarytest.ui.search.SearchFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_todolist"
        android:name="com.example.diarytest.ui.todolist.ToDoListFragment"
        android:label="@string/title_todolist"
        tools:layout="@layout/fragment_todolist" />

    <fragment
        android:id="@+id/navigation_post"
        android:name="com.example.diarytest.ui.post.PostFragment"
        android:label="@string/title_post"
        tools:layout="@layout/fragment_post" />

    <fragment
        android:id="@+id/navigation_calender"
        android:name="com.example.diarytest.ui.calendar.CalendarFragment"
        android:label="@string/title_calender"
        tools:layout="@layout/fragment_calendar" />
</navigation>