<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/post_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.post.PostFragment">

    <ImageView
        android:id="@+id/post_gallery_imageview"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:background="@color/black"
        android:backgroundTint="#23FFFFFF"
        android:contentDescription="@string/post_gallery_button"
        android:src="@android:drawable/ic_menu_gallery"
        app:tint="@color/white"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="107dp" />

    <EditText
        android:id="@+id/post_add_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:hint="@string/post_title_add"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#4DFFFFFF"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/todolist_add_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/post_add_tag"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:backgroundTint="@color/white"
        android:hint="@string/post_tag_add"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#4DFFFFFF"
        android:textColorLink="@color/white"
        android:textCursorDrawable="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/todolist_add_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/post_addtext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/border"
        android:cursorVisible="true"
        android:gravity="start|top"
        android:hint="@string/post_text_add"
        android:inputType="textMultiLine"
        android:minHeight="48dp"
        android:minLines="7"
        android:padding="10dp"
        android:shadowColor="@color/white"
        android:textColor="@color/white"
        android:textColorHint="#757575" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/post_savebutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="28dp"
            android:clickable="true"
            android:contentDescription="@string/post_saveButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/white"
            app:srcCompat="@android:drawable/ic_menu_save" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>